tests/rosetta/out/Swift/averages-median-2.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:11Z
func sel(_ list: [Double], _ k: Int) -> Double {
    var i = 0
    while i <= k {
        var minIndex = i
        var j = i + 1
        while j < list.count {
            if list[j] < list[minIndex] {
                minIndex = j
            }
            j = j + 1
        }
        let tmp = list[i]
        list[i] = list[minIndex]
        list[minIndex] = tmp
        i = i + 1
    }
    return list[k]
}
func median(_ a: [Double]) -> Double {
    var arr = a
    let half = Int((arr.count / 2))
    let med = sel(arr, half)
    if arr.count % 2 == 0 {
        return (med + arr[half - 1]) / 2.0
    }
    return med
}
print(String(median([3.0, 1.0, 4.0, 1.0])))
print(String(median([3.0, 1.0, 4.0, 1.0, 5.0])))
